# garuda-codec

./: Cargo.toml  README.md  hk.pkl  mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint_and_test.yml
garuda-codec/: Cargo.toml
garuda-codec-core/: Cargo.toml
garuda-codec-core/src/: block_decoder.rs  block_encoder.rs  decoder.rs  encoder.rs  io.rs  io_stream.rs  lib.rs  random.rs  socket.rs  vector.rs
garuda-codec-core/tests/: integration_test.rs
garuda-codec/src/: main.rs
garuda-file-transfer/: Cargo.toml
garuda-file-transfer/src/: lib.rs  protocol.rs  string.rs  transfer.rs
scripts/: setup_veth.sh
